# smallz4

./: .gitignore  CMakeLists.txt  readme.md
include/: smallz4.hpp  smallz4_original.hpp
src/: main.cpp  smallz4.cpp
